--- a/admin/nexus/nexus.adoc
+++ b/admin/nexus/nexus.adoc
@@ -46,6 +46,44 @@ image::images/early_access.png[]
 +
 image::images/public_repo.png[]
 
+== Accessing your Nexus container
+
+Considering you have access to the host that is already running the Nexus container you can access it easily with *nsenter*. In Linux environemnts it's installed by `util-linux` package. When running *boot2docker* follow the steps:
+
+. This works with boot2docker until you restart it.
++
+
+[source,console,numbered]
+------
+docker run --rm -v /usr/local/bin:/target jpetazzo/nsenter
+------
++
+. Then log into *boot2docker* executing:
++
+
+[source,console,numbered]
+------
+boot2docker ssh
+------
++
+. Figure out the PID of the container you want to enter by executing the following:
++
+
+[source,console,numbered]
+------
+PID=$(docker inspect --format {{.State.Pid}} <container_name_or_ID>)
+------
++
+. Then enter the container:
++
+
+[source,console,numbered]
+------
+nsenter --target $PID --mount --uts --ipc --net --pid
+------
++
+NOTE: Is possible to replace the configuration within the Nexus container by copying this link:nexus.xml[nexus.xml] provided in `/sonatype-work/conf` folder.
+
 == Persistent Volume Storage
 
 -----
